--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,11 @@
     <properties>
         <java.version>1.8</java.version>
         <kotlin.version>1.4.10</kotlin.version>
-        <frontend-maven-plugin.version>1.7.6</frontend-maven-plugin.version>
-        <node.version>v10.15.2</node.version>
-        <npm.version>6.4.1</npm.version>
+        <frontend-maven-plugin.version>1.10.4</frontend-maven-plugin.version>
+<!--        <node.version>v10.15.2</node.version>-->
+<!--        <npm.version>6.4.1</npm.version>-->
+        <node.version>v15.6.0</node.version>
+        <npm.version>7.4.0</npm.version>
         <catsAppSrcDir>${project.basedir}/cats-app</catsAppSrcDir>
     </properties>
 
